# mads-telemarketing-assigment

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
notebooks/: 1.0-kve-exploratory-data-analysis.ipynb  1.0-kve-predictive-modelling.ipynb  1.0-sb-exploratory-data-analysis.ipynb  2.0-kve-predictive-modelling.ipynb  2.0-sb-predictive-modelling.ipynb  2.1-kve-predictive-modelling.ipynb  2.1-sb-predictive-moddeling-reasoning.ipynb  2.1-sb-predictive-modeling-reasoning.ipynb  2.2-kve-predictive-modelling.ipynb  3.0-kve-cost-estimating.ipynb
reports/: 20250629-kve-design-science-research-template.md  20250629-kve-presentation.md  20250629-kve-reflection-report-en.md  20250629-kve-reflection-report-nl.md  20250629-kve-reflection-report.md  20250629-kve-research-report-en.md  20250629-kve-research-report-nl.md  20250629-kve-research-report.md
reports/citations/: mads-telemarketing-assignment.bib
src/mads_telemarketing_assignment/: config.py  metrics.py  utils.py  visualization.py
