[project]
name = "mads-telemarketing-project"
version = "0.1.0"
description = "Predictive modelling module assignment"
authors = [
    { name = "Koen van Esterik", email = "kd.vanesterik@student.han.nl" },
]
dependencies = [
    "imblearn>=0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas-stubs>=2.2.3.250527",
    "pandas>=2.2.3",
    "plot-shift>=0.2.2",
    "scikit-learn>=1.6.1",
    "tabulate>=0.9.0",
    "ucimlrepo>=0.0.7",
    "xgboost>=3.0.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true